syntax = "proto3";

message BufferValueMetrics {
  /*
    The fields 1 - 3 are generated using following command "cat /proc/sys/net/ipv4/tcp_rmem".
    You can find further documentation in https://man7.org/linux/man-pages/man7/tcp.7.html
    and search tcp_rmem;
*/
  optional uint64 tcp_rcv_buffer_min = 1; //minimum size of the receive buffer used by each TCP socket.
  optional uint64 tcp_rcv_buffer_default = 2; //the default size of the receive buffer for a TCP socket.
  optional uint64 tcp_rcv_buffer_max = 3; //the maximum size of the receive buffer used by each TCP socket.

  /*
      The fields 4 - 6 are generated using following command "cat /proc/sys/net/ipv4/tcp_wmem".
      You can find further documentation in https://man7.org/linux/man-pages/man7/tcp.7.html
      and search tcp_wmem;
  */
  optional uint64 tcp_snd_buffer_min = 4; //minimum size of the send buffer used by each TCP socket.
  optional uint64 tcp_snd_buffer_default = 5; //the default size of the send buffer for a TCP socket.
  optional uint64 tcp_snd_buffer_max = 6; //the maximum size of the send buffer used by each TCP socket.
}